# marathon-performance-predictor

./: .gitignore  Makefile  README.md  bentofile.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/: build-log.md  features.md  fitness-model.md
feature_repo/: definitions.py  feature_store.yaml
notebooks/: 01_explore_data.ipynb
scripts/: build_features.py  deploy.sh  evaluate_models.py  export_onnx.py  feast_demo.py  validate_fitness.py
src/marathon/: __init__.py  service.py
src/marathon/features/: __init__.py  build.py  efforts.py  fitness.py  garmin.py  load.py  running.py  wellness.py
src/marathon/model/: curve.py  evaluate.py  export.py
src/marathon/parse/: __init__.py  __main__.py  activities.py
tests/: test_build.py  test_curve.py  test_efforts.py  test_evaluate.py  test_export.py  test_features.py  test_fitness.py  test_garmin.py  test_parse.py  test_running.py  test_smoke.py  test_wellness.py
